--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@firebase/auth": "^0.16.1",
     "@firebase/firestore": "^2.1.2",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.3",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
